kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  namespace: ${K8S_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      name: booking-app
  template:
    metadata:
      labels:
        name: booking-app
    spec:
      containers:
        - name: booking-backend
          image: "qanguyen/booking-backend:${GIT_COMMIT}"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: booking-postgres-secret
              mountPath: /opt/config/
              readOnly: true
        - name: booking-frontend
          image: "qanguyen/booking-frontend:${GIT_COMMIT}"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      volumes:
        - name: booking-postgres-secret
          secret:
            secretName: booking-postgres-secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-postgres-deployment
  namespace: ${K8S_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      name: booking-postgres
  template:
    metadata:
      labels:
        name: booking-postgres
    spec:
      containers:
        - name: booking-postgres
          image: postgres:12.7
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
              name: postgresql
          volumeMounts:
            - name: booking-postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: booking-postgres-storage
          persistentVolumeClaim:
            claimName: booking-pvc
