kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: booking-backend
---
apiVersion: v1
kind: "Service"
metadata:
  name: booking-postgres-service
  labels:
    name: booking-postgres-service
  annotations:
    description: Booking postgres
spec:
  type: NodePort
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 31111
      protocol: TCP
  selector:
    name: booking-postgres
  sessionAffinity: "None"
